refactor(MainController): 세부 구현사항 변경